--- a/src/app/popovergrua/popovergrua.component.html
+++ b/src/app/popovergrua/popovergrua.component.html
@@ -10,14 +10,17 @@
         <!-- Precio del servicio -->
           <p style="font-size: 15px; margin-top: 5px; margin-bottom: 5px; padding: 0px; margin-left: 15px;">Servicio de enganche........$30.00</p>
            <!-- Distancia -->
-          <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Distancia..........................$3.00/milla</p>
+          <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Precio por Milla.............$3.00/milla</p>
+           <!-- Pecio millas calculadas -->
+          <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Millas.......................................{{distancia}}mi</p>
            <!-- Tiempo estimado -->
           <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Tiempo Estimado.................10 min</p>
+
 
          
 
           <p class=descr>Tiene un costo total de</p>
-          <h4 class=total>$90.00</h4>
+          <h4 class=total>${{total}}.00</h4>
           <!-- COSTO TOTAL GRUA -->
       </div>
   </ion-card>
