--- a/src/app/locatio-marker/locatio-marker.page.html
+++ b/src/app/locatio-marker/locatio-marker.page.html
@@ -10,15 +10,22 @@
 
 <ion-card class=menu>
   <h6 class="instrucciones">ESCRIBA O MARQUE EL LUGAR A DONDE QUIERE IR LUEGO DE SER ASISTIDO POR EL GRUERO</h6>
-  <p class="titulo-destino">DESTINO <span *ngIf="this.distance != null" style="font-weight: bold; color: black;">{{this.distance}}mi</span></p>
+  <p class="titulo-destino">DESTINO <span *ngIf="this.distance != null"
+      style="font-weight: bold; color: black;">{{this.distance}} millas</span></p>
   <ion-row style="margin-left: 5px; margin-right: 5px;">
-<ion-col size="10"><ion-input [(ngModel)]='destino' class="input-destino" placeholder="Ej. Calle Hiedra, Cidra PR."></ion-input></ion-col>   <!-- (ngModelChange)="loadMap()" -->
-<ion-col size="2"><ion-button (click)="setDestino()"><ion-icon name="pin"></ion-icon></ion-button></ion-col>
-</ion-row>
+    <ion-col size="10">
+      <ion-input [(ngModel)]='destino' class="input-destino" placeholder="Ej. Calle Hiedra, Cidra PR."></ion-input>
+    </ion-col> <!-- (ngModelChange)="loadMap()" -->
+    <ion-col size="2">
+      <ion-button (click)="setDestino()">
+        <ion-icon name="pin"></ion-icon>
+      </ion-button>
+    </ion-col>
+  </ion-row>
   <ion-grid class="grid-botones">
     <ion-row>
       <ion-col>
-          <ion-button class="solicitar" expand="block" (click)="changePage()">Solicitar</ion-button>
+        <ion-button class="solicitar" expand="block" (click)="changePage()">Solicitar</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -32,9 +39,8 @@
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <div id='map1' style='width: 100%; height: 80vh;'></div>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
-<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
   <style>
-
     body {
       margin: 0;
       padding: 0;
@@ -44,10 +50,8 @@
       position: absolute;
       top: 0;
       bottom: 0;
-      width: 100%;}
-
-    
-    
+      width: 100%;
+    }
   </style>
 
 
