--- a/src/app/request/request.page.html
+++ b/src/app/request/request.page.html
@@ -43,7 +43,7 @@
               <!-- SECOND COLUMN ENDS HERE -->
 
               <span *ngIf="request.service != 'Grua'">
-                  <ion-button (click)="goTo()" class="btn-cotizaciones">VER COTIZACIONES</ion-button>
+                  <ion-button (click)="goTo(request.objectId)" class="btn-cotizaciones">VER COTIZACIONES</ion-button>
               </span>
 
             </ion-row>
