--- a/src/app/cotizaciones/cotizaciones.page.html
+++ b/src/app/cotizaciones/cotizaciones.page.html
@@ -1,21 +1,19 @@
 <ion-header no-border>
     <ion-toolbar style="--background:#6561AB;">
       <ion-button class="arrow-btn" fill=clear style="color:white;" (click)="navigateBack()"><ion-icon name=md-arrow-round-back></ion-icon></ion-button>
-      <ion-title class="pay-title" style="font-weight:300; color:white">Solicitudes</ion-title>
+      <ion-title class="pay-title" style="font-weight:300; color:white">COTIZACIONES</ion-title>
     </ion-toolbar>
   </ion-header>
-  <h6 class="explicacion">
-    *COTIZACIONES DE GRUEROS QUE PUEDEN ATENDERTE*
-  </h6>
+
   <div class="espacio">
-    <ion-card>
+    <ion-card *ngFor="let quot of quots"  >
       <ion-grid>
         <ion-row>
           <ion-col size="4">
               <h6 class="titulo">GRUERO:</h6> 
           </ion-col>
           <ion-col size="5">
-              <h6 class="nombre">Carlos Aponte</h6> 
+              <h6 class="nombre">{{quot.driver.name}}</h6> 
           </ion-col>
           <ion-col size="3">
             <ion-button class="btn-aceptar">
@@ -28,7 +26,7 @@
                 <h6 class="titulo">PRECIO:</h6> 
             </ion-col>
             <ion-col size="5">
-                <h6 class="precio">$250.00</h6> 
+                <h6 class="precio">{{quot.price}}</h6> 
             </ion-col>
             <ion-col size="3">
                 <ion-button class="btn-declinar">
@@ -38,35 +36,5 @@
           </ion-row>
       </ion-grid>
     </ion-card>
-  
-    <ion-card>
-        <ion-grid>
-          <ion-row>
-            <ion-col size="4">
-                <h6 class="titulo">GRUERO:</h6> 
-            </ion-col>
-            <ion-col size="5">
-                <h6 class="nombre">Carlos Aponte</h6> 
-            </ion-col>
-            <ion-col size="3">
-              <ion-button class="btn-aceptar">
-                  <ion-icon name="md-checkmark-circle"></ion-icon>
-              </ion-button>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-              <ion-col size="4">
-                  <h6 class="titulo">PRECIO:</h6> 
-              </ion-col>
-              <ion-col size="5">
-                  <h6 class="precio">$250.00</h6> 
-              </ion-col>
-              <ion-col size="3">
-                  <ion-button class="btn-declinar">
-                      <ion-icon name="md-close-circle"></ion-icon>
-                  </ion-button>
-                </ion-col>
-            </ion-row>
-        </ion-grid>
-      </ion-card>
+
   </div>
