--- a/src/app/cotizaciones/cotizaciones.page.html
+++ b/src/app/cotizaciones/cotizaciones.page.html
@@ -29,7 +29,7 @@
                 <h6 class="precio">{{quot.price}}</h6> 
             </ion-col>
             <ion-col size="3">
-              <ion-button (click)= 'removeCotizaciones(quot.objectId)' class="btn-declinar">
+              <ion-button (click)= 'removeCotizaciones(quot)' class="btn-declinar">
                     <ion-icon name="md-close-circle"></ion-icon>
                 </ion-button>
               </ion-col>
