--- a/src/app/escoger-pago/escoger-pago.page.html
+++ b/src/app/escoger-pago/escoger-pago.page.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class= btnText>
-  <ion-button (click)='makePayment()'>PAGAR</ion-button>
+  <ion-button (click)='makePayment()'>SOLICITAR SERVICIO</ion-button>
 </div>
 
 <ion-fab vertical="bottom" horizontal="end" slot="fixed">
