--- a/src/app/popovergrua/popovergrua.component.html
+++ b/src/app/popovergrua/popovergrua.component.html
@@ -12,9 +12,9 @@
            <!-- Distancia -->
           <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Precio por Milla.............$3.00/milla</p>
            <!-- Pecio millas calculadas -->
-          <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Millas.......................................{{distancia}} millas</p>
+          <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Millas.......................................{{distancia}}mi</p>
            <!-- Tiempo estimado -->
-          <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Tiempo Estimado.................{{time}} min</p>
+          <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Tiempo Estimado.................{{time}}min</p>
          
           <p class=descr>Tiene un costo total de</p>
           <h4 class=total>${{total}}.00</h4>
