Cambios en servicio especial
flujo de servicio especial arreglado, condiciones de servicio pedido donde no pueda pedir mas de un servicio a la vez

--- a/src/app/cotizaciones/cotizaciones.page.html
+++ b/src/app/cotizaciones/cotizaciones.page.html
@@ -16,7 +16,7 @@
               <h6 class="nombre">{{quot.driver.name}}</h6> 
           </ion-col>
           <ion-col size="3">
-            <ion-button class="btn-aceptar">
+            <ion-button (click)= 'acceptQuote()' class="btn-aceptar">
                 <ion-icon name="md-checkmark-circle"></ion-icon>
             </ion-button>
           </ion-col>
