--- a/src/app/historial/historial.page.html
+++ b/src/app/historial/historial.page.html
@@ -13,7 +13,7 @@
   <ion-list lines=none>
     <ion-card *ngFor="let request of requests" style="padding: 0;">
       <ion-item id="requests">
-        <button class="boton" expand="full" (click)=presentInfo(request)>
+        <button class="boton" expand="full">
           <ion-grid>
             <ion-row>
 
