--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,9 +13,9 @@
            <h2>Solicitar un servicio</h2>
           </ion-card-subtitle> <br>
 
-           <p>Desde cualquier lugar que te encuentres en la isla,
-             podrás solicitar uno de los siguientes servicios:
-             cerrajero, batería, gasolina grúa y servicio especial.</p> 
+           <p>Desde cualquier lugar que se encuentre en la isla,
+             podrá solicitar uno de los siguientes servicios:
+             cerrajería, batería, gasolina, grúa y servicio especial.</p> 
              
       </ion-card>
     </ion-slide>
@@ -28,8 +28,8 @@
              <h3>Confirmar el servicio</h3>
             </ion-card-subtitle> <br>
   
-             <p>Podrás confirmar el servicio solicitado, luego de haberte
-               calculado el costo dependiendo de la ubicación en la que te encuentres.</p> 
+             <p>Podrá confirmar el servicio solicitado, luego de haberle
+               calculado el costo dependiendo de la ubicación en la que se encuentre.</p> 
                
             
         </ion-card>
@@ -43,8 +43,8 @@
              <h3>Tu servicio va de camino</h3>
             </ion-card-subtitle> <br>
   
-             <p>Una vez te acepten el servicios, podrás ver por dónde
-               viene la persona que te dará el servicio solicitado.</p>             
+             <p>Una vez le acepten el servicio, podrá ver por dónde
+               viene la persona que le dará el servicio solicitado.</p>             
             
         </ion-card>
     </ion-slide>
@@ -57,7 +57,7 @@
              <h2>¡Listo!</h2>
             </ion-card-subtitle> <br>
   
-             <p>Una vez terminado el servicio podrás evaluar el servicio brindado.</p> 
+             <p>Una vez terminado el servicio podrá evaluarlo.</p> 
                
                <!-- boton para comenzar y que lleva a prox pagina -->
             <ion-button margin=20px expand="block" (click)=navigate()> COMENZAR </ion-button>
