--- a/src/app/popovergrua/popovergrua.component.html
+++ b/src/app/popovergrua/popovergrua.component.html
@@ -1,9 +1,22 @@
+ <span *ngIf="service == 'Grua'">
  <div class=header>
       <ion-img class=img style="width: 50%;" src="assets/grua.svg"></ion-img>
       <div class=title>
       </div>
     </div>
-    
+</span>
+
+
+<span *ngIf="service == 'Servicio Especial'">
+    <div class=header>
+         <ion-img class=img style="width: 50%;" src="assets/choqueicon.svg"></ion-img>
+         <div class=title>
+         </div>
+       </div>
+   </span>
+   
+
+   <span *ngIf="service == 'Grua'">
   <ion-card padding class=card>
    
       <div class=precios>
@@ -21,6 +34,26 @@
           <!-- COSTO TOTAL GRUA -->
       </div>
   </ion-card>
+</span>
+
+<span *ngIf="service == 'Servicio Especial'">
+    <ion-card padding class=card>
+     
+        <div class=precios>
+          <!-- Precio del servicio -->
+             <!-- Distancia -->
+            <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Precio por Milla.............$3.00/milla</p>
+             <!-- Pecio millas calculadas -->
+            <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Millas.......................................{{distancia}}mi</p>
+             <!-- Tiempo estimado -->
+            <p style="font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Tiempo Estimado.................{{time}}min</p>
+           
+            <p class=descr>Total por millas: </p>
+            <h4 class=total>${{total}}.00</h4>
+            <!-- COSTO TOTAL GRUA -->
+        </div>
+    </ion-card>
+  </span>
 
   <div class="botones">
     <!-- Botones -->
