--- a/src/app/num-verification/num-verification.page.html
+++ b/src/app/num-verification/num-verification.page.html
@@ -11,14 +11,14 @@
 <div class=codigo>
     
     <div id="form">
-        <ion-input maxlength ='1' #one id="one" type="number" class="verification-code" placeholder="&bull;" maxLength="1" size="1" min="0" max="9"
-         (onkeyup)="gotoNextfield(two)"></ion-input>
-        <ion-input maxlength ='1' #two id="two" type="number" class="verification-code" placeholder="&bull;" maxLength="1" size="1" min="0" max=“9”
-        (onkeyup)="gotoNextfield(three)"></ion-input>
-        <ion-input maxlength ='1' #three id="three" type=“number” class="verification-code" placeholder="&bull;" maxLength="1" size="1" min="0" max=“9”
-        (onkeyup)="gotoNextfield(four)"></ion-input>
-        <ion-input maxlength ='1' #four id="four" type=“number” class="verification-code" placeholder="&bull;" maxLength="1" size="1" min="0" max=“9”
-        (onkeyup)="add(this)"></ion-input>
+        <ion-input maxlength = "1" id="one" #one  type="tel"  class="verification-code" placeholder="&bull;"  size="1" min="0" max="9"
+        (keyup) = "gotoNextField(two)"  ></ion-input>
+        <ion-input maxlength = "1"  id="two" #two type="tel" class="verification-code" placeholder="&bull;"  size="1" min="0" max="9"
+        (keyup)="gotoNextField(three)"></ion-input>
+        <ion-input maxlength = "1"  id="three" #three type="tel" class="verification-code" placeholder="&bull;"  size="1" min="0" max=“9”
+        (keyup)="gotoNextField(four)"></ion-input>
+        <ion-input maxlength = "1"  id="four" #four type="tel" class="verification-code" placeholder="&bull;"  size="1" min="0" max="9"
+        ></ion-input>
       </div>
 
       <ion-button margin=20px expand="block" (click)= reSendCode()>Reenviar</ion-button>
