--- a/src/app/pagar/pagar.page.html
+++ b/src/app/pagar/pagar.page.html
@@ -52,7 +52,7 @@
               <h1 class="titulo">Millas:</h1>
           </ion-col>
           <ion-col *ngIf="servicio == 'Grua' || servicio == 'Servicio Especial'">
-              <h1 class="respuesta">${{totalCost}}.00</h1>
+              <h1 class="respuesta">{{millas}}mi</h1>
           </ion-col>
         </ion-row>
         <ion-row>
