--- a/src/app/popover/popover.component.html
+++ b/src/app/popover/popover.component.html
@@ -209,7 +209,7 @@
 
     <ion-card padding class=card>
         <div class=precios>
-            <p style="text-align: center; font-size: 15px; margin-top: 70px; margin-bottom: 5px; padding: 0px; margin-left: 15px;">Servicio de enganche........$30.00</p>
+            <p style="text-align: center; font-size: 15px; margin-top: 70px; margin-bottom: 5px; padding: 0px; margin-left: 15px;"></p>
             <!-- PRECIO servicio SERVICIO ESPECIAL -->
             <p style="text-align: center; font-size: 15px; padding: 0px; margin-top: 0px; margin-left: 15px; margin-bottom: 0px;">Precio por milla.........$3.00</p>
 
