--- a/src/app/serviceoptions/serviceoptions.page.html
+++ b/src/app/serviceoptions/serviceoptions.page.html
@@ -25,8 +25,8 @@
       </div>
 
     <div>
-      <ion-button margin  style='font-size: 15px;' expand=block>Cambiar la ubicación</ion-button>
-      <ion-button margin  href="/rating"  [disabled]="disabled" style="font-size: 15px;" expand=block>Servicio culminado</ion-button>
+      <ion-button *ngIf ="service == 'Grua'" margin (click)='goToLocation()'  style='font-size: 15px;'  expand=block>Cambiar la ubicación</ion-button>
+      <ion-button margin  href="/rating"  [disabled]="disabled" style="font-size: 15px;" expand=block>Servicio culminado (PAGAR)</ion-button>
       <ion-button margin  (click)='Cancel()' style="--background: rgb(255, 75, 75); font-size: 15px;" expand=block>Cancelar</ion-button>
     </div>
   </ion-card>
