--- a/src/app/locatio-marker/locatio-marker.page.html
+++ b/src/app/locatio-marker/locatio-marker.page.html
@@ -14,7 +14,7 @@
       style="font-weight: bold; color: black;">{{this.distance}} millas</span></p>
   <ion-row style="margin-left: 5px; margin-right: 5px;">
     <ion-col size="10">
-      <ion-input [(ngModel)]='destino' class="input-destino" placeholder="Ej. Calle Hiedra, Cidra PR."></ion-input>
+      <ion-input [(ngModel)]='destino' class="input-destino" placeholder="Ej. Calle Hiedra, Cidra Puerto Rico."></ion-input>
     </ion-col> <!-- (ngModelChange)="loadMap()" -->
     <ion-col size="2">
       <ion-button (click)="setDestino()">
