--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -14,26 +14,26 @@
   <ion-list>
     <ion-item>
       <ion-label>Nombre</ion-label>
-      <ion-input type="text" style="font-size: 15px; text-align: right;" placeholder="{{name}}"></ion-input>
+      <ion-input [(ngModel)]="name" type="text" style="font-size: 15px; text-align: right;" placeholder="{{name}}"></ion-input>
       <ion-button fill=clear slot="end"><ion-icon name=ios-arrow-forward></ion-icon></ion-button>
       </ion-item>
     <ion-item>
       <ion-label>Email</ion-label>
-      <ion-input type="email" style="font-size: 15px; text-align: right;" placeholder="{{email}}"></ion-input>
+      <ion-input [(ngModel)]="email" type="email" style="font-size: 15px; text-align: right;" placeholder="{{email}}"></ion-input>
       <ion-button fill=clear slot="end"><ion-icon name=ios-arrow-forward></ion-icon></ion-button>
       </ion-item>
     <ion-item>
       <ion-label>Número de licencia</ion-label>
-      <ion-input type="numeric" style="font-size: 15px; text-align: right;" placeholder="########"></ion-input>
+      <ion-input [(ngModel)]="licenseNumber" type="numeric" style="font-size: 15px; text-align: right;" placeholder="{{licenseNumber}}"></ion-input>
       <ion-button  fill=clear slot="end"><ion-icon name=ios-arrow-forward></ion-icon></ion-button>
       </ion-item>
     <ion-item>
       <ion-label>Teléfono</ion-label>
-      <ion-input type="tel" style="font-size: 15px; text-align: right;" placeholder="{{phoneNumber}}"></ion-input>
+      <ion-input [(ngModel)]="phoneNumber" type="tel" style="font-size: 15px; text-align: right;" placeholder="{{phoneNumber}}"></ion-input>
       <ion-button fill=clear slot="end"><ion-icon name=ios-arrow-forward></ion-icon></ion-button>
       </ion-item>
   </ion-list>
 </ion-content>
 
 
-<ion-button (click)=navBack() class="addbutton">GUARDAR</ion-button>
+<ion-button (click)=checkLicenseNum() class="addbutton">GUARDAR</ion-button>
