--- a/src/app/escoger-pago/escoger-pago.page.html
+++ b/src/app/escoger-pago/escoger-pago.page.html
@@ -20,7 +20,7 @@
     <ion-content class="lista">
         <ion-list>
             <ion-item *ngFor="let card of cards">
-                <button class="boton" (click)=getCard(card)>
+                <button class="boton">
                 <ion-card class="card">
                     <ion-grid class="grid">
                         <ion-row style="height: 50px;">
@@ -41,7 +41,7 @@
 </div>
 
 <div class= btnText>
-  <ion-button (click)='makePayment()'>SOLICITAR SERVICIO</ion-button>
+  <ion-button (click)='getCard(card)'>SOLICITAR SERVICIO</ion-button>
 </div>
 
 <ion-fab vertical="bottom" horizontal="end" slot="fixed">
